--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,6 +10,7 @@ a { text-decoration: none;}
 #main {width: 96%; line-height: 1.8; margin:auto; border:1px #ccc dashed; text-align: left; text-indent: 2em;}
 .mytable {width: 96%;border: 1px solid #bbbbbb;border-collapse: collapse}
 td {border: 1px solid #bbbbbb;border-collapse: collapse;}
+th {border: 1px solid #bbbbbb;border-collapse: collapse;}
 </style>
 </head>
 
@@ -19,13 +20,13 @@ td {border: 1px solid #bbbbbb;border-collapse: collapse;}
 	<table class="mytable">
         <thead>
             <tr>
-                <td>id</td>
-                <td>名字</td>
-                <td>品种</td>
-                <td>位置</td>
-                <td>性别</td>
-                <td>年龄</td>
-                <td>操作</td>
+                <th>id</th>
+                <th>名字</th>
+                <th>品种</th>
+                <th>位置</th>
+                <th>性别</th>
+                <th>年龄</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
