--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -5,7 +5,7 @@ body{margin:0; padding:0; font-size:9pt;}
 #top_center{width:248px; height:89px; background:url(../images/login_05.gif); float:left;}
 
 #center_left{width:691px; height:190px; background:url(../images/login_09.png); float:left;}
-#center_middle{width:248px; height:190px; float:left; background:url(../images/login_13.gif) repeat-y;}
+#center_middle{width:248px; height:190px; float:left; background:url(../images/login_13.gif) repeat-y;text-align: center}
 #center_right{width:36px; height:190px; float:right; background:url(../images/login_11.gif);}
 
 #down_left{width:691px; height:89px; float:left; margin-top:15px;}
