perf 优化登录_注册_修改信息

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,6 +24,7 @@
 					   <div id="password">密   码
 						 <input type="password" name="password" />
 					   </div>
+					  	<span th:text="${msg}" style="color: darkred">lalala</span><br>
 					   <input value="注册" type="submit"/>
 				  </form>
 			  </div>
