--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,18 +1,10 @@
-body{margin:0; padding:0; font-size:9pt;}
-#login{margin:auto; width:975px; height:368px; margin-top:120px;}
-#top_left{width:691px; height:89px; float:left;}
-#top_left img {margin-left:33px;}
-#top_center{width:248px; height:89px; background:url(../images/login_05.gif); float:left;}
+body{margin:0; padding:0; font-size:12px;}
+.header{background: #eff4fa; width: 100%; height: 62px;border-bottom: 1px solid #d6dfea}
 
-#center_left{width:691px; height:190px; background:url(../images/login_09.png); float:left;}
-#center_middle{width:248px; height:190px; float:left; background:url(../images/login_13.gif) repeat-y;text-align: center}
-#center_right{width:36px; height:190px; float:right; background:url(../images/login_11.gif);}
+#center{width: 100%;position: absolute;top: 62px;bottom:36px;left: 0px;padding-top: 75px}
+#center_middle{width:334px; height:387px;text-align: center;border: 1px solid #a0b1c4;background-color: #fff;float: right}
 
-#down_left{width:691px; height:89px; float:left; margin-top:15px;}
-#down_center{width:248px; height:89px; background:url(../images/login_16.gif); float:left;}
-#inf{width:691px; height:38px; background:url(../images/login_18.gif) no-repeat; }
-.inf_text{display:block; width:100px; height:20px; font-size:16px; font-weight:bolder; color:#fff; margin-left:17px; margin-top:12px; float:left;}
-.copyright{display:block; float:left; margin-left:17px; margin-top:15px;}
+#down{width:100%; height:36px;position: fixed;bottom: 0px;background-color: #eff4fa;border-top: 1px solid #d6dfea;text-align: center;color: #b6b6b6;}
 
 #user{ margin-left:40px; margin-top:45px; height:25px;}
 #password{margin-left:40px; margin-top:25px; height:25px;}
