--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
 	</div>
 	 <div id="center">
 		 <div>
-			 <img th:src="@{images/login/contentImg.jpg}" height="282px" width="500px"/>
+<!--			 <img th:src="@{images/login/contentImg.jpg}" height="282px" width="500px"/>-->
 			 <div id="center_middle">
 				  注册方式
 				  <form th:action="@{/registAccout}" method="post">
