--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,7 +1,7 @@
 body{margin:0; padding:0; font-size:12px;}
 .header{background: #eff4fa; width: 100%; height: 62px;border-bottom: 1px solid #d6dfea}
 
-#center{width: 100%;position: absolute;top: 62px;bottom:36px;left: 0px;padding-top: 75px}
+#center{background:url("../images/login/contentImg.jpg");width: 100%;position: absolute;top: 62px;bottom:36px;left: 0px;padding-top: 75px;}
 #center_middle{width:334px; height:387px;text-align: center;border: 1px solid #a0b1c4;background-color: #fff;float: right}
 
 #down{width:100%; height:36px;position: fixed;bottom: 0px;background-color: #eff4fa;border-top: 1px solid #d6dfea;text-align: center;color: #b6b6b6;}
