--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -20,6 +20,7 @@ body{margin:0; padding:0; font-size:12px;}
 }
 #description span {
    margin-top: 10px;
+    size: A5;
     color: #ccc;
 }
 #down{width:100%; height:36px;position: fixed;bottom: 0px;background-color: #eff4fa;border-top: 1px solid #d6dfea;text-align: center;color: #b6b6b6;}
