--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,17 +3,28 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>登录</title>
-	<link th:href="@{/css/login.css}" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" th:href="@{/global/css/layui.css}">
+	<link th:href="@{/global/css/layui.css}" rel="stylesheet">
 	<script th:src="@{/global/layui.js}"></script>
+	<script th:src="@{/global/utils/httprequest.js}"></script>
+
+	<link th:href="@{/css/login.css}" rel="stylesheet" type="text/css" />
 	<script>
 		//Demo
 		layui.use('form', function(){
 			var form = layui.form;
-
+			console.log(form)
 			//监听提交
 			form.on('submit(formDemo)', function(data){
-				layer.msg(JSON.stringify(data.field));
+				const info  = this.innerText;
+				console.log(info)
+				const url = info === '注册'? '/registAccount' : '/loginAccount'
+				request(url, "POST", data.field).then((res) => {
+					//console.log(res.data.token)
+					//location.href = '/index'
+				})
+				.catch(err => {
+					console.log(err)
+				})
 				return false;
 			});
 		});
@@ -30,34 +41,84 @@
 			 <span>我们都是城市生态系统的一部分</span>
 		 </div>
 		  <div id="center_middle">
+			 <div class="title">
+				 <span class="login selected" >登录</span>
+				 <span class="register">注册</span>
+			 </div>
+			  <div class="login-form marginTop" style="display: none">
+				  <form th:action="@{/loginAccount}" method="post" class="layui-form">
+					  <div class="layui-form-item">
+						  <label class="layui-form-label">账号</label>
+						  <div class="layui-input-block">
+							  <input type="text" name="account" required lay-verify="required" placeholder="邮箱或手机" autocomplete="off" class="layui-input">
+						  </div>
+					  </div>
+					  <div class="layui-form-item">
+						  <label class="layui-form-label">密码</label>
+						  <div class="layui-input-block">
+							  <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+						  </div>
+					  </div>
+					  <span th:text="${msg}" style="color: darkred">lalala</span><br>
+					  <div class="layui-form-item">
+						  <div class="layui-input-block">
+							  <button class="layui-btn toggle"  lay-submit lay-filter="formDemo">注册</button>
 
-			  <form th:action="@{/loginAccount}" method="post" class="layui-form">
-				  <div class="layui-form-item" style="vertical-align:middle">
-					  <label class="layui-form-label">账号</label>
-					  <div class="layui-input-block">
-					   		<input type="text" name="account" required lay-verify="required" placeholder="请输入账号" autocomplete="off" class="layui-input">
+							  <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						  </div>
 					  </div>
-				  </div>
-				  <div class="layui-form-item">
-					  <label class="layui-form-label">密码</label>
-					  <div class="layui-input-block">
-						  <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+				  </form>
+			  </div>
+			  <div class="register-form marginTop">
+				  <form th:action="@{/loginAccount}" method="post" class="layui-form">
+					  <div class="layui-form-item">
+						  <label class="layui-form-label">账号</label>
+						  <div class="layui-input-block">
+							  <input type="text" name="account" required lay-verify="required" placeholder="邮箱或手机" autocomplete="off" class="layui-input">
+						  </div>
 					  </div>
-				  </div>
-				  <span th:text="${msg}" style="color: darkred">lalala</span><br>
-				  <div class="layui-form-item">
-					  <div class="layui-input-block">
-						  <button class="layui-btn" lay-submit lay-filter="formDemo">登录</button>
-						  <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+					  <div class="layui-form-item">
+						  <label class="layui-form-label">密码</label>
+						  <div class="layui-input-block">
+							  <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+						  </div>
 					  </div>
-				  </div>
-			  </form>
-			  <br>
-			  <a th:href="@{/register}">注册</a>
+					  <span th:text="${msg}" style="color: darkred">lalala</span><br>
+					  <div class="layui-form-item">
+						  <div class="layui-input-block">
+							  <button class="layui-btn toggle"  lay-submit lay-filter="formDemo">登录</button>
+							  <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						  </div>
+					  </div>
+				  </form>
+			  </div>
+
 		  </div>
 	 </div>
 	<div id="down">
 		版本信息：流浪动物管理系统 v0.1
 	</div>
 </body>
+<script>
+	var login = document.querySelector(".login")
+	var register = document.querySelector(".register")
+	var loginForm = document.querySelector(".login-form")
+	var registerForm = document.querySelector(".register-form")
+	login.addEventListener('click', ()=>{
+		console.log("login")
+		loginForm.style.display = 'none';
+		registerForm.style.display = 'block'
+		login.classList.add('selected')
+		register.classList.remove('selected')
+
+	})
+	register.addEventListener("click", ()=>{
+		console.log("register")
+		loginForm.style.display = 'block';
+		registerForm.style.display = 'none'
+		login.classList.remove('selected')
+		register.classList.add('selected')
+	})
+
+</script>
 </html>
